--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	font-family: Bookman, URW Bookman L, serif;
 }
 
 header {
@@ -74,9 +75,12 @@ footer {
     display:inline-block;
     vertical-align:top;
     font-size:13px;
-    margin-top: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
     width: 100%;
-	background-color: white;
+	background-color: rgba(0, 0, 0, .6);
+	color: white;
+
 }
 
 footer p {
@@ -88,6 +92,13 @@ h3 {
 	text-align: center;
 }
 
+link { 
+	color: white; 
+}
 
+.signature {
+	text-align: left;
+	margin: 10px;
+}
 
 
