--- a/style.css
+++ b/style.css
@@ -45,9 +45,8 @@ nav ul li a {
 
 .logoImg {
 	height: 170px;
-	position: absolute;
-	top: 95px;
-	left: 45%;
+	position: center;
+	margin-top: 120px;
 }
 
 footer ul li  {
@@ -99,6 +98,10 @@ link {
 .signature {
 	text-align: left;
 	margin: 10px;
+}
+
+.log {
+	text-align: center;
 }
 
 
