--- a/style/style.css
+++ b/style/style.css
@@ -86,9 +86,10 @@ nav li a {
 	margin-bottom: 10px;
     width: 100%;
 	background-color: rgba(0, 0, 0, .6);
-	color: white;
+	color: red;
 
 }
+
 .footer2 {
 	text-align:center;
     position: fixed;
@@ -101,8 +102,26 @@ nav li a {
 	margin-bottom: 10px;
     width: 100%;
 	background-color: rgba(0, 0, 0, .6);
-	color: green;
+	color: white;
 
+}
+.positionA{
+	width:85px;
+	height:85px;
+	background:#fafafa;
+	box-shadow:2px 2px 8px #aaa;
+	font:bold 13px Arial;
+	border-radius:50%;
+	color:#555;
+}
+.positionB{
+	width:85px;
+	height:85px;
+	background:#fafafa;
+	box-shadow:2px 2px 8px #aaa;
+	font:bold 13px Arial;
+	border-radius:50%;
+	color:#555;
 }
 
 footer p {
@@ -134,4 +153,25 @@ link {
 	background-color: black;
 	color: white;
 }
-
+.onoff
+{
+  font-family: Arial,sans-serif;
+     font-size: 1.6em;
+     width: 200px;
+     height: 43px;
+     padding-top: 7px; /*permet le centrage vertical*/
+     text-align: center;
+     color: white;
+     background: #444;
+     background: #444;
+     background: linear-gradient( #555, #2C2C2C);
+     border-radius: 8px;
+     text-shadow: 0px 1px 0px white;
+     text-shadow: 0px 1px 0px rgba( 255, 255, 255, 0.2);
+     box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5),
+                 0 -1px 0 rgba( 255, 255, 255, 0.4);
+}
+.onoff div
+{
+ 
+}
