--- a/style/style.css
+++ b/style/style.css
@@ -177,6 +177,7 @@ link {
 }
 
 /* style des boutons de logs*/
+
 .grandcontainerBouton{
 	display:flex;
 	align-item: center;
@@ -203,7 +204,8 @@ link {
 	color:#fff;
 }
 
-/*page inscription*/
+/*page login */
+
 .grandContainerLog{
 	display:flex;
 	align-item: center;
@@ -224,4 +226,51 @@ link {
 }
 .logRedirectInscscription{
 	text-align: justify;
+}
+
+/* Style de la page d'inscription */
+
+.containerFormulaire {
+	align-content: center;
+	border: double grey 10px;
+	margin: auto;
+	margin-top: 50px;
+	margin-bottom: 80px;
+	padding: 20px;
+	width: 300px;
+	height: 100%;
+	position: relative;
+	background-color: whitesmoke;
+}
+
+.incriptionFormulaire {
+	text-align: center;
+}
+
+ul {
+	text-align: left;
+}
+
+li {
+	list-style: none;
+}
+/* Images et icones de la page d'inscription */
+
+#paperPlaneIcon {
+	height: 40px;
+	width: 40px;
+	position: absolute;
+	margin-top: -60px;
+	margin-left: 0px;
+}
+
+.imgBox1 {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+}
+
+#AncientPlaneImg {
+	height: 100%;
+	width: 100%;
 }
