--- a/style/style.css
+++ b/style/style.css
@@ -65,30 +65,26 @@ nav ul li a {
 .logoImg {
 	height: 170px;
 	position: center;
-	margin-top: 120px;
+	margin-top: 60px;
 }
-
-footer ul li  {
-    position: fixed;
-    bottom: 0px;
-    padding:0px;
-	margin: 0px;
-	list-style-type: none;
-	display: inline-block;
-	text-align: center;
-
-}
-
 
 nav li a {
 	text-decoration: none;
 	color: black;
 }
 
+#link {
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
+	font-weight: bold;
+}
 
 .footer {
 	text-align:center;
-    position: fixed;
+	font-size: 20px;
+	position: fixed;
+	text-decoration: none;
     bottom:0;
     width:100%;
     display:inline-block;
@@ -96,9 +92,10 @@ nav li a {
     font-size:13px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	padding: 10px;
     width: 100%;
 	background-color: rgba(0, 0, 0, .6);
-	color: red;
+	color: white;
 
 }
 
@@ -168,10 +165,10 @@ link {
 .onoff
 {
   font-family: Arial,sans-serif;
-     font-size: 1.6em;
+     font-size: 1em;
      width: 200px;
      height: 43px;
-     padding-top: 7px; /*permet le centrage vertical*/
+     padding-top: 4px; /*permet le centrage vertical*/
      text-align: center;
      color: white;
      background: #444;
@@ -278,7 +275,7 @@ li {
 
 .imgBox1 {
 	position: absolute;
-	height: 100%;
+	height: 110%;
 	width: 100%;
 }
 
